<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:src="@drawable/ic_tbs_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_overlay_rounded"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/margin_med" >

        <TextView
            android:id="@+id/textView1"
            style="@style/textLargeLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prelogin_title" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_med"
            android:padding="@dimen/margin_small"
            android:text="@string/login_card" />

        <Button
            android:id="@+id/btnFb"
            style="@style/btn_blue_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_med"
            android:text="@string/login_fb" />

        <Button
            android:id="@+id/btnRegister"
            style="@style/btn_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_med"
            android:text="@string/signup" />
    </LinearLayout>

</RelativeLayout>