<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.iapps.libs.views.ImageViewLoader
        android:id="@+id/imgBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >
    </com.iapps.libs.views.ImageViewLoader>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_med"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="?android:attr/actionBarSize" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_med"
                android:orientation="horizontal" >

                <com.iapps.libs.views.ImageViewLoader
                    android:id="@+id/imgProfile"
                    android:layout_width="@dimen/img_profile"
                    android:layout_height="@dimen/img_profile" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_med"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btnFb"
                        style="@style/btn_blue_fb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/link_fb" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_med"
                android:background="@drawable/overlay"
                android:orientation="vertical"
                android:padding="@dimen/margin_med" >

                <TextView
                    style="@style/textLargeLightBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details" />

                <com.material.widget.FloatingEditText
                    android:id="@+id/edtName"
                    style="@style/tbsEdt_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_med"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />

                <com.material.widget.FloatingEditText
                    android:id="@+id/edtFamily"
                    style="@style/tbsEdt_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" >
                </com.material.widget.FloatingEditText>

                <com.material.widget.FloatingEditText
                    android:id="@+id/edtEmail"
                    style="@style/tbsEdt_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/textLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_small"
                        android:text="@string/extension" />

                    <com.material.widget.FloatingEditText
                        android:id="@+id/edtPhone"
                        style="@style/tbsEdt_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/phone"
                        android:inputType="phone" />
                </LinearLayout>

                <com.material.widget.FloatingEditText
                    android:id="@+id/edtDob"
                    style="@style/tbsEdt_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/dob"
                    android:inputType="text" />

                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/rbMale"
                        style="@style/radio_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radio_white"
                        android:checked="true"
                        android:text="@string/male"
                        android:textColor="@color/White" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        style="@style/radio_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radio_white"
                        android:text="@string/female"
                        android:textColor="@color/White" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                style="@style/btn_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_med"
                android:text="@string/submit" />

            <Button
                android:id="@+id/btnSkip"
                style="@style/btn_transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/margin_med"
                android:paddingLeft="@dimen/margin_small"
                android:paddingRight="@dimen/margin_small"
                android:text="@string/skip_login"
                android:textColor="@color/White" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>